// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overrides className 1`] = `
<Button
  className="base"
>
  I am child
</Button>
`;

exports[`renders as a button with children 1`] = `
<Button
  className="base"
>
  I am child
</Button>
`;

exports[`renders as disabled 1`] = `
<Button
  className="base disabled"
  disabled={true}
>
  I am child
</Button>
`;

exports[`renders as noOutline 1`] = `
<Button
  className="base noOutline"
>
  I am child
</Button>
`;
